lang/tests/contract/ui/fail/21-generic-storage.stderr
error: generics are not allowed for `#[liquid(storage)]` struct
 --> $DIR/21-generic-storage.rs:6:16
  |
6 |     struct Noop<T> {
  |                ^^^
